--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
   },
   "dependencies": {
     "@types/uuid": "^9.0.1",
+    "bignumber.js": "^9.1.1",
     "npm-run-all": "^4.1.5",
+    "tiktoken-node": "^0.0.6",
     "tsc-alias": "^1.8.6",
     "tsconfig-paths": "^4.2.0"
   }
