--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "typings": "dist/src/index.d.ts",
-  "type": "commonjs",
+  "type": "module",
   "exports": {
     ".": "./dist/index.js"
   },
@@ -62,6 +62,7 @@
     "npm-run-all": "^4.1.5",
     "tiktoken-node": "^0.0.6",
     "tsc-alias": "^1.8.6",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "langchain": "^0.0.110"
   }
 }
