--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "engines": {
     "node": ">=14.16"
   },
